# esp32_learning

./: sdkconfig  sdkconfig.old
components/agile_ftp/: CMakeLists.txt
components/agile_ftp/inc/: ftp.h  ftp_session.h  ftp_session_cmd.h
components/agile_ftp/src/: ftp.c  ftp_session.c  ftp_session_cmd.c
components/agile_modbus/: CMakeLists.txt
components/agile_modbus/inc/: agile_modbus.h
components/agile_modbus/src/: agile_modbus.c  agile_modbus_tcp.c
components/agile_modbus/util/: agile_modbus_slave_util.c  agile_modbus_slave_util.h
components/key/: CMakeLists.txt  key.c  key.h
components/led/: CMakeLists.txt  led.c  led.h
components/letter-shell-shell2.x/: CMakeLists.txt  shell.lf  shell_cfg.h
components/letter_console/: CMakeLists.txt  Kconfig  letter_console.c  letter_console.h
components/mb_rtu/: CMakeLists.txt  rtu_slave.c  rtu_slave.h
components/mb_slave/: CMakeLists.txt  mb_slave.c  mb_slave.h
components/mb_tcp/: CMakeLists.txt  mbtcp_session.c  mbtcp_session.h  mbtcp_slave.c  mbtcp_slave.h
components/pwm/: pwm.c  pwm.h
components/sdcard/: CMakeLists.txt  Kconfig  sdcard.c  sdcard.h
components/sdcard/sdmmc/: sdmmc_sdcard.c  sdmmc_sdcard.h
components/sdcard/sdspi/: spi_sdcard.c  spi_sdcard.h
components/spi_sdcard/: CMakeLists.txt  Kconfig  spi_sdcard.c
components/timer/: CMakeLists.txt  timer.c  timer.h
components/wifi/: CMakeLists.txt  Kconfig  wifi_sta.c  wifi_sta.h
main/: Kconfig.projbuild  main.c
